[feat]: Add auth screens
